Bug 1343695 Part 2: Expand tests of GetClientRectsAndTexts to test more cases where rendered text differs from DOM text. r=mats
MozReview-Commit-ID: G0NfRJhAh50

UltraBlame original commit: e5db40a036fef8a575630d94c0fcb0d436ca957c

--- a/dom/base/test/chrome/test_range_getClientRectsAndTexts.html
+++ b/dom/base/test/chrome/test_range_getClientRectsAndTexts.html
@@ -196,8 +196,7 @@ textList
 [
 "
 it
-\
-nbre
+bre
 "
 ]
 message
@@ -379,6 +378,222 @@ message
 "
 Inline
 image
+"
+}
+{
+startNode
+:
+"
+hyphen1
+"
+start
+:
+0
+endNode
+:
+"
+hyphen1
+"
+end
+:
+3
+textList
+:
+[
+"
+a
+\
+u00AD
+"
+"
+b
+"
+]
+message
+:
+"
+Shy
+hyphen
+(
+active
+)
+"
+}
+{
+startNode
+:
+"
+hyphen2
+"
+start
+:
+0
+endNode
+:
+"
+hyphen2
+"
+end
+:
+3
+textList
+:
+[
+"
+c
+\
+u00ADd
+"
+]
+message
+:
+"
+Shy
+hyphen
+(
+inactive
+)
+"
+}
+{
+startNode
+:
+"
+hyphen2
+"
+start
+:
+0
+endNode
+:
+"
+hyphen2
+"
+end
+:
+2
+textList
+:
+[
+"
+c
+\
+u00AD
+"
+]
+message
+:
+"
+Shy
+hyphen
+(
+inactive
+trailing
+)
+"
+}
+{
+startNode
+:
+"
+hyphen2
+"
+start
+:
+1
+endNode
+:
+"
+hyphen2
+"
+end
+:
+3
+textList
+:
+[
+"
+\
+u00ADd
+"
+]
+message
+:
+"
+Shy
+hyphen
+(
+inactive
+leading
+)
+"
+}
+{
+startNode
+:
+"
+uc
+"
+start
+:
+0
+endNode
+:
+"
+uc
+"
+end
+:
+2
+textList
+:
+[
+"
+EF
+"
+]
+message
+:
+"
+UC
+transform
+"
+}
+{
+startNode
+:
+"
+pre
+"
+start
+:
+0
+endNode
+:
+"
+pre
+"
+end
+:
+3
+textList
+:
+[
+"
+g
+\
+n
+"
+"
+h
+"
+]
+message
+:
+"
+pre
+with
+break
 "
 }
 ]
@@ -772,6 +987,90 @@ span
 <
 /
 div
+>
+<
+div
+id
+=
+"
+hyphen1
+"
+style
+=
+"
+width
+:
+0
+"
+>
+a
+&
+shy
+;
+b
+<
+/
+div
+>
+<
+div
+id
+=
+"
+hyphen2
+"
+style
+=
+"
+width
+:
+100px
+"
+>
+c
+&
+shy
+;
+d
+<
+/
+div
+>
+<
+div
+id
+=
+"
+uc
+"
+style
+=
+"
+text
+-
+transform
+:
+uppercase
+"
+>
+ef
+<
+/
+div
+>
+<
+pre
+id
+=
+"
+pre
+"
+>
+g
+h
+<
+/
+pre
 >
 <
 /
