Bug 1318312 part.3 Selection should move focus at every selection change when it's called by JS r=smaug
Selection may be changed by methods of Selection or methods of Range retrieved by Selection.getRangeAt().  Selection::NotifySelectionListeners() is called after every selection change of each of them, so, this method must be a good point to move focus.

If new common ancestor of all ranges is editable and in an editing host, we should move focus to it.  Otherwise, if an editing host has focus but new common ancestor is not editable, we should move focus from the editing host.

For consistency with the other browsers, this patch doesn't move focus to other focusable element.

MozReview-Commit-ID: 6sNsuzwqECX

UltraBlame original commit: 22e1a32de5b88f1f56a156aefa95614b5cda204c

--- a/editor/libeditor/tests/test_bug676401.html
+++ b/editor/libeditor/tests/test_bug676401.html
@@ -341,6 +341,20 @@ styleWithCSS
 ]
 ;
 function
+ensureNobodyHasFocus
+(
+)
+{
+document
+.
+activeElement
+.
+blur
+(
+)
+;
+}
+function
 IsCommandEnabled
 (
 command
@@ -348,6 +362,10 @@ command
 {
 var
 enabled
+;
+ensureNobodyHasFocus
+(
+)
 ;
 /
 /
@@ -745,6 +763,21 @@ only
 to
 chrome
 .
+ensureNobodyHasFocus
+(
+)
+;
+window
+.
+getSelection
+(
+)
+.
+selectAllChildren
+(
+gBlock2
+)
+;
 commands
 =
 [
