--- a/editor/libeditor/tests/test_contenteditable_focus.html
+++ b/editor/libeditor/tests/test_contenteditable_focus.html
@@ -1440,9 +1440,7 @@ element
 in
 the
 editor
-(
-unfocused
-)
+.
 range
 =
 document
@@ -1501,14 +1499,12 @@ fm
 .
 focusedElement
 )
-otherEditor
+editor
 "
 the
 other
 editor
-shouldn
-'
-t
+should
 lose
 focus
 by
