Bug 1326331 - Fix Eslint errors in devtools/shared/heapsnapshot/. r=jryans
UltraBlame original commit: 476316fd67e96531868fe416ed7545c757027e8d

--- a/devtools/shared/heapsnapshot/tests/mochitest/test_DominatorTree_01.html
+++ b/devtools/shared/heapsnapshot/tests/mochitest/test_DominatorTree_01.html
@@ -139,6 +139,19 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
+/
+*
+global
+window
+ChromeUtils
+DominatorTree
+*
+/
 SimpleTest
 .
 waitForExplicitFinish
