--- a/devtools/shared/heapsnapshot/tests/mochitest/test_saveHeapSnapshot_e10s_01.html
+++ b/devtools/shared/heapsnapshot/tests/mochitest/test_saveHeapSnapshot_e10s_01.html
@@ -117,6 +117,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onerror
@@ -363,7 +368,7 @@ function
 (
 )
 {
-var
+let
 iframe
 =
 document
@@ -420,7 +425,7 @@ loading
 "
 )
 ;
-var
+let
 mm
 =
 SpecialPowers
