Bug 1316305 - Add debug information for test_upgrade_insecure_requests. r=jmaher
UltraBlame original commit: 61774c8f5fd39c63b5ee4b8535ad6e7767c19ec8

--- a/dom/security/test/csp/file_upgrade_insecure.html
+++ b/dom/security/test/csp/file_upgrade_insecure.html
@@ -737,6 +737,109 @@ function
 e
 )
 {
+/
+/
+debug
+information
+for
+Bug
+1316305
+dump
+(
+"
+xxx
+mySocket
+.
+onerror
+:
+(
+mySocket
+)
+:
+"
++
+mySocket
++
+"
+\
+n
+"
+)
+;
+dump
+(
+"
+xxx
+mySocket
+.
+onerror
+:
+(
+mySocket
+.
+url
+)
+:
+"
++
+mySocket
+.
+url
++
+"
+\
+n
+"
+)
+;
+dump
+(
+"
+xxx
+mySocket
+.
+onerror
+:
+(
+e
+)
+:
+"
++
+e
++
+"
+\
+n
+"
+)
+;
+dump
+(
+"
+xxx
+mySocket
+.
+onerror
+:
+(
+e
+.
+message
+)
+:
+"
++
+e
+.
+message
++
+"
+\
+n
+"
+)
+;
 window
 .
 parent
