Bug 1307481 - Part 4: Implements the Inline Tooltip widget. r=jdescottes
UltraBlame original commit: fda394bed2829c9a123d5a11b3346192a547051e

--- a/devtools/client/inspector/inspector.xhtml
+++ b/devtools/client/inspector/inspector.xhtml
@@ -176,6 +176,36 @@ chrome
 /
 devtools
 /
+content
+/
+shared
+/
+widgets
+/
+color
+-
+widget
+.
+css
+"
+/
+>
+<
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
+chrome
+:
+/
+/
+devtools
+/
 skin
 /
 inspector
