Bug 1332166 - Wait for the clipboard to be updated before checking it, r=enndeakin
MozReview-Commit-ID: Ea6jZCYjuaY

UltraBlame original commit: c7d1e31935ce5185b13f0e26dd1afc3d8aaaa875

--- a/dom/plugins/test/mochitest/test_copyText.html
+++ b/dom/plugins/test/mochitest/test_copyText.html
@@ -130,6 +130,25 @@ plugin1
 "
 )
 ;
+/
+/
+Make
+sure
+we
+wait
+for
+the
+clipboard
+SimpleTest
+.
+waitForClipboard
+(
+text
+(
+)
+=
+>
+{
 textElt
 .
 focus
@@ -161,6 +180,12 @@ copy
 (
 )
 ;
+}
+(
+)
+=
+>
+{
 is
 (
 plugin
@@ -175,6 +200,35 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+(
+)
+=
+>
+{
+ok
+(
+false
+"
+Failed
+to
+set
+the
+clipboard
+text
+!
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
 )
 ;
 }
