Bug 1333353 - Implement getAutocompleteInfo() for select element. r=smaug
UltraBlame original commit: 7a5d71853f680fee22bbee519696cb90397db92b

--- a/dom/html/test/forms/test_autocompleteinfo.html
+++ b/dom/html/test/forms/test_autocompleteinfo.html
@@ -151,6 +151,15 @@ input
 /
 >
 <
+select
+id
+=
+"
+select
+"
+/
+>
+<
 /
 form
 >
@@ -646,23 +655,91 @@ start
 (
 )
 {
-const
-fieldid
-=
-"
-input
-"
-;
-var
+let
 field
 =
 document
 .
 getElementById
 (
-fieldid
+"
+input
+"
 )
 ;
+testAutocompleteInfoValue
+(
+field
+"
+input
+"
+)
+;
+for
+(
+var
+type
+of
+autocompleteEnabledTypes
+)
+{
+testAutocomplete
+(
+field
+type
+true
+)
+;
+}
+for
+(
+var
+type
+of
+autocompleteDisabledTypes
+)
+{
+testAutocomplete
+(
+field
+type
+false
+)
+;
+}
+field
+=
+document
+.
+getElementById
+(
+"
+select
+"
+)
+;
+testAutocompleteInfoValue
+(
+field
+"
+select
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
+function
+testAutocompleteInfoValue
+(
+aField
+aFieldId
+)
+{
 for
 (
 var
@@ -687,7 +764,7 @@ test
 undefined
 "
 )
-field
+aField
 .
 removeAttribute
 (
@@ -697,7 +774,7 @@ autocomplete
 )
 ;
 else
-field
+aField
 .
 setAttribute
 (
@@ -713,7 +790,7 @@ test
 var
 info
 =
-field
+aField
 .
 getAutocompleteInfo
 (
@@ -750,7 +827,7 @@ section
 for
 "
 +
-fieldid
+aFieldId
 +
 "
 :
@@ -793,7 +870,7 @@ addressType
 for
 "
 +
-fieldid
+aFieldId
 +
 "
 :
@@ -836,7 +913,7 @@ contactType
 for
 "
 +
-fieldid
+aFieldId
 +
 "
 :
@@ -879,7 +956,7 @@ fieldName
 for
 "
 +
-fieldid
+aFieldId
 +
 "
 :
@@ -892,44 +969,6 @@ test
 )
 ;
 }
-for
-(
-var
-type
-of
-autocompleteEnabledTypes
-)
-{
-testAutocomplete
-(
-field
-type
-true
-)
-;
-}
-for
-(
-var
-type
-of
-autocompleteDisabledTypes
-)
-{
-testAutocomplete
-(
-field
-type
-false
-)
-;
-}
-SimpleTest
-.
-finish
-(
-)
-;
 }
 function
 testAutocomplete
