--- a/testing/web-platform/harness/test/testdata/reftest/reftest_wait_0.html
+++ b/testing/web-platform/harness/test/testdata/reftest/reftest_wait_0.html
@@ -1,4 +1,14 @@
 <
+html
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 title
 >
 rel
@@ -39,16 +49,6 @@ red
 style
 >
 <
-body
-class
-=
-"
-reftest
--
-wait
-"
->
-<
 script
 >
 setTimeout
@@ -69,7 +69,9 @@ backgroundColor
 green
 "
 ;
-body
+document
+.
+documentElement
 .
 className
 =
@@ -80,3 +82,11 @@ className
 2000
 )
 ;
+<
+/
+script
+>
+<
+/
+html
+>
