Bug 1347508 - Fix duplicate test names in selection test, r=AutomatedTester
MozReview-Commit-ID: 8ZyMh9j3xaL

UltraBlame original commit: 2e033635421cbca9084e5b64117212fac451ba3a

--- a/testing/web-platform/tests/html/semantics/forms/textfieldselection/selection-start-end.html
+++ b/testing/web-platform/tests/html/semantics/forms/textfieldselection/selection-start-end.html
@@ -66,6 +66,7 @@ createInputElement
 (
 value
 append
+suffix
 )
 {
 var
@@ -117,6 +118,15 @@ not
 appended
 "
 )
++
+(
+suffix
+?
+suffix
+:
+"
+"
+)
 ;
 if
 (
@@ -143,6 +153,7 @@ createTextareaElement
 (
 value
 append
+suffix
 )
 {
 var
@@ -186,6 +197,15 @@ not
 appended
 "
 )
++
+(
+suffix
+?
+suffix
+:
+"
+"
+)
 ;
 if
 (
@@ -221,6 +241,10 @@ createInputElement
 (
 value
 append
+"
+-
+prefocused
+"
 )
 ;
 el
@@ -253,6 +277,10 @@ createTextareaElement
 (
 value
 append
+"
+-
+prefocused
+"
 )
 ;
 el
@@ -322,7 +350,7 @@ false
 ]
 ;
 }
-const
+var
 testValue
 =
 "
