Bug 1342433 - don't recreate a tree on onclick changes, r=yzen
UltraBlame original commit: 7c05090a2cd01ad71df1d3840ca17818d8b6cdba

--- a/accessible/tests/mochitest/treeupdate/test_bug1175913.html
+++ b/accessible/tests/mochitest/treeupdate/test_bug1175913.html
@@ -335,7 +335,7 @@ eventSeq
 =
 [
 new
-invokerChecker
+unexpectedInvokerChecker
 (
 EVENT_HIDE
 getNode
@@ -381,7 +381,7 @@ testRemoveListener_finalCheck
 (
 )
 {
-is
+ok
 (
 getAccessible
 (
@@ -392,20 +392,22 @@ null
 null
 DONOTFAIL_IF_NO_ACC
 )
-null
 "
-Check
-that
-parent
-is
-not
+Parent
+stays
 accessible
-.
+after
+click
+event
+listener
+is
+removed
 "
 )
 ;
-is
+ok
 (
+!
 getAccessible
 (
 "
@@ -415,15 +417,10 @@ null
 null
 DONOTFAIL_IF_NO_ACC
 )
-null
 "
-Check
-that
-child
-is
-not
-accessible
-.
+Child
+stays
+inaccessible
 "
 )
 ;
