--- a/toolkit/content/aboutSupport.xhtml
+++ b/toolkit/content/aboutSupport.xhtml
@@ -1855,6 +1855,123 @@ section
 &
 aboutSupport
 .
+featuresTitle
+;
+<
+/
+h2
+>
+<
+table
+>
+<
+thead
+>
+<
+tr
+>
+<
+th
+>
+&
+aboutSupport
+.
+featureName
+;
+<
+/
+th
+>
+<
+th
+>
+&
+aboutSupport
+.
+featureVersion
+;
+<
+/
+th
+>
+<
+th
+>
+&
+aboutSupport
+.
+featureId
+;
+<
+/
+th
+>
+<
+/
+tr
+>
+<
+/
+thead
+>
+<
+tbody
+id
+=
+"
+features
+-
+tbody
+"
+>
+<
+/
+tbody
+>
+<
+/
+table
+>
+<
+!
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+>
+<
+h2
+class
+=
+"
+major
+-
+section
+"
+>
+&
+aboutSupport
+.
 extensionsTitle
 ;
 <
