Backed out changeset 7c05090a2cd0 (bug 1342433) for failing browser_treeupdate_listener.js. r=backout
UltraBlame original commit: 76614caf4ddc829499cf8739031878f29a28e465

--- a/accessible/tests/mochitest/treeupdate/test_bug1175913.html
+++ b/accessible/tests/mochitest/treeupdate/test_bug1175913.html
@@ -335,7 +335,7 @@ eventSeq
 =
 [
 new
-unexpectedInvokerChecker
+invokerChecker
 (
 EVENT_HIDE
 getNode
@@ -381,7 +381,7 @@ testRemoveListener_finalCheck
 (
 )
 {
-ok
+is
 (
 getAccessible
 (
@@ -392,22 +392,20 @@ null
 null
 DONOTFAIL_IF_NO_ACC
 )
+null
 "
-Parent
-stays
-accessible
-after
-click
-event
-listener
+Check
+that
+parent
 is
-removed
+not
+accessible
+.
 "
 )
 ;
-ok
+is
 (
-!
 getAccessible
 (
 "
@@ -417,10 +415,15 @@ null
 null
 DONOTFAIL_IF_NO_ACC
 )
+null
 "
-Child
-stays
-inaccessible
+Check
+that
+child
+is
+not
+accessible
+.
 "
 )
 ;
