--- a/accessible/tests/mochitest/treeupdate/test_textleaf.html
+++ b/accessible/tests/mochitest/treeupdate/test_textleaf.html
@@ -371,9 +371,7 @@ textLeaf
 actionCount
 1
 "
-setOnClickAttr
-:
-wrong
+Wrong
 action
 numbers
 !
@@ -387,14 +385,28 @@ removeOnClickAttr
 aID
 )
 {
-let
-node
+this
+.
+__proto__
 =
-getNode
+new
+textLeafUpdate
 (
 aID
+false
 )
 ;
+this
+.
+invoke
+=
+function
+removeOnClickAttr_invoke
+(
+)
+{
+this
+.
 node
 .
 removeAttribute
@@ -404,32 +416,31 @@ onclick
 "
 )
 ;
-let
-textLeaf
+}
+this
+.
+getID
 =
-getAccessible
+function
+removeOnClickAttr_getID
 (
-node
 )
-.
-firstChild
-;
-is
+{
+return
+"
+unmake
+"
++
+prettyName
 (
-textLeaf
-.
-actionCount
-0
-"
-removeOnClickAttr
-:
-wrong
-action
-numbers
-!
-"
+aID
 )
++
+"
+linkable
+"
 ;
+}
 }
 function
 setOnClickNRoleAttrs
@@ -795,26 +806,6 @@ div
 ;
 /
 /
-remove
-onclick
-attribute
-text
-leaf
-shouldn
-'
-t
-have
-any
-action
-removeOnClickAttr
-(
-"
-div
-"
-)
-;
-/
-/
 Call
 rest
 of
@@ -826,6 +817,32 @@ gQueue
 new
 eventQueue
 (
+)
+;
+/
+/
+remove
+onclick
+attribute
+text
+leaf
+shouldn
+'
+t
+have
+any
+action
+gQueue
+.
+push
+(
+new
+removeOnClickAttr
+(
+"
+div
+"
+)
 )
 ;
 /
