Backed out changeset 2e033635421c (bug 1347508)
UltraBlame original commit: 9d5742ca6ab87eabb01c36d8fe019ab84b58370a

--- a/testing/web-platform/tests/html/semantics/forms/textfieldselection/selection-start-end.html
+++ b/testing/web-platform/tests/html/semantics/forms/textfieldselection/selection-start-end.html
@@ -66,7 +66,6 @@ createInputElement
 (
 value
 append
-suffix
 )
 {
 var
@@ -118,15 +117,6 @@ not
 appended
 "
 )
-+
-(
-suffix
-?
-suffix
-:
-"
-"
-)
 ;
 if
 (
@@ -153,7 +143,6 @@ createTextareaElement
 (
 value
 append
-suffix
 )
 {
 var
@@ -197,15 +186,6 @@ not
 appended
 "
 )
-+
-(
-suffix
-?
-suffix
-:
-"
-"
-)
 ;
 if
 (
@@ -241,10 +221,6 @@ createInputElement
 (
 value
 append
-"
--
-prefocused
-"
 )
 ;
 el
@@ -277,10 +253,6 @@ createTextareaElement
 (
 value
 append
-"
--
-prefocused
-"
 )
 ;
 el
@@ -350,7 +322,7 @@ false
 ]
 ;
 }
-var
+const
 testValue
 =
 "
