Backed out changeset 5f0452991bcd (bug 1345490)
UltraBlame original commit: 42dd946a6f2d47c07f1812cd9c42bc1d520ac43a

--- a/testing/web-platform/harness/test/testdata/reftest/reftest_wait_0.html
+++ b/testing/web-platform/harness/test/testdata/reftest/reftest_wait_0.html
@@ -1,14 +1,4 @@
 <
-html
-class
-=
-"
-reftest
--
-wait
-"
->
-<
 title
 >
 rel
@@ -49,6 +39,16 @@ red
 style
 >
 <
+body
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 script
 >
 setTimeout
@@ -69,9 +69,7 @@ backgroundColor
 green
 "
 ;
-document
-.
-documentElement
+body
 .
 className
 =
@@ -82,11 +80,3 @@ className
 2000
 )
 ;
-<
-/
-script
->
-<
-/
-html
->
