Bug 1319137 - (intersection-observer) Add isIntersecting property to IntersectionObserverEntry r=mrbkap,mstange
MozReview-Commit-ID: GmwpD0FYWAa

UltraBlame original commit: 8a47d616af8f56f7cb0c9b210901b621e645465a

--- a/dom/base/test/test_intersectionobservers.html
+++ b/dom/base/test/test_intersectionobservers.html
@@ -5689,6 +5689,24 @@ records
 0
 ]
 .
+isIntersecting
+)
+.
+to
+.
+be
+.
+ok
+(
+)
+;
+expect
+(
+records
+[
+0
+]
+.
 target
 )
 .
@@ -6018,6 +6036,24 @@ records
 0
 ]
 .
+isIntersecting
+)
+.
+to
+.
+be
+.
+ok
+(
+)
+;
+expect
+(
+records
+[
+0
+]
+.
 target
 )
 .
@@ -6097,52 +6133,21 @@ function
 done
 )
 {
+var
+spy
+=
+sinon
+.
+spy
+(
+)
+;
 io
 =
 new
 IntersectionObserver
 (
-function
-(
-records
-)
-{
-expect
-(
-records
-.
-length
-)
-.
-to
-.
-be
-(
-1
-)
-;
-expect
-(
-records
-[
-0
-]
-.
-intersectionRatio
-)
-.
-to
-.
-be
-(
-0
-)
-;
-done
-(
-)
-;
-}
+spy
 {
 root
 :
@@ -6150,6 +6155,14 @@ rootEl
 }
 )
 ;
+runSequence
+(
+[
+function
+(
+done
+)
+{
 targetEl1
 .
 style
@@ -6195,6 +6208,187 @@ io
 observe
 (
 targetEl1
+)
+;
+spy
+.
+waitForNotification
+(
+function
+(
+)
+{
+var
+records
+=
+sortRecords
+(
+spy
+.
+lastCall
+.
+args
+[
+0
+]
+)
+;
+expect
+(
+records
+.
+length
+)
+.
+to
+.
+be
+(
+1
+)
+;
+expect
+(
+records
+[
+0
+]
+.
+intersectionRatio
+)
+.
+to
+.
+be
+(
+0
+)
+;
+expect
+(
+records
+[
+0
+]
+.
+isIntersecting
+)
+.
+to
+.
+be
+.
+ok
+(
+)
+;
+done
+(
+)
+;
+}
+ASYNC_TIMEOUT
+)
+;
+}
+function
+(
+done
+)
+{
+targetEl1
+.
+style
+.
+top
+=
+'
+-
+1px
+'
+;
+spy
+.
+waitForNotification
+(
+function
+(
+)
+{
+var
+records
+=
+sortRecords
+(
+spy
+.
+lastCall
+.
+args
+[
+0
+]
+)
+;
+expect
+(
+records
+.
+length
+)
+.
+to
+.
+be
+(
+1
+)
+;
+expect
+(
+records
+[
+0
+]
+.
+intersectionRatio
+)
+.
+to
+.
+be
+(
+0
+)
+;
+expect
+(
+records
+[
+0
+]
+.
+isIntersecting
+)
+.
+to
+.
+be
+(
+false
+)
+;
+done
+(
+)
+;
+}
+ASYNC_TIMEOUT
+)
+;
+}
+]
+done
 )
 ;
 }
