Bug 1342526 - quote string expression results in console; r=nchevobbe
MozReview-Commit-ID: 1HFbotCZoZ6

UltraBlame original commit: 495238244147f39cc7c9316b0d4530e1adb2af36

--- a/devtools/client/webconsole/new-console-output/test/mochitest/test-console.html
+++ b/devtools/client/webconsole/new-console-output/test/mochitest/test-console.html
@@ -60,6 +60,7 @@ script
 *
 exported
 doLogs
+stringLog
 *
 /
 "
@@ -104,6 +105,21 @@ i
 )
 ;
 }
+}
+function
+stringLog
+(
+)
+{
+console
+.
+log
+(
+"
+stringLog
+"
+)
+;
 }
 <
 /
