Bug 1342433 - onclick changes shouldn't recreate the tree, r=yzen
UltraBlame original commit: 3873a60605b37e31f0d39bd65f2aa528f14734d5

--- a/accessible/tests/mochitest/treeupdate/test_textleaf.html
+++ b/accessible/tests/mochitest/treeupdate/test_textleaf.html
@@ -371,7 +371,9 @@ textLeaf
 actionCount
 1
 "
-Wrong
+setOnClickAttr
+:
+wrong
 action
 numbers
 !
@@ -385,28 +387,14 @@ removeOnClickAttr
 aID
 )
 {
-this
-.
-__proto__
+var
+node
 =
-new
-textLeafUpdate
+getNode
 (
 aID
-false
 )
 ;
-this
-.
-invoke
-=
-function
-removeOnClickAttr_invoke
-(
-)
-{
-this
-.
 node
 .
 removeAttribute
@@ -416,31 +404,32 @@ onclick
 "
 )
 ;
-}
-this
-.
-getID
+var
+textLeaf
 =
-function
-removeOnClickAttr_getID
+getAccessible
 (
+node
 )
-{
-return
-"
-unmake
-"
-+
-prettyName
-(
-aID
-)
-+
-"
-linkable
-"
+.
+firstChild
 ;
-}
+is
+(
+textLeaf
+.
+actionCount
+0
+"
+removeOnClickAttr
+:
+wrong
+action
+numbers
+!
+"
+)
+;
 }
 function
 setOnClickNRoleAttrs
@@ -806,21 +795,6 @@ div
 ;
 /
 /
-Call
-rest
-of
-event
-tests
-.
-gQueue
-=
-new
-eventQueue
-(
-)
-;
-/
-/
 remove
 onclick
 attribute
@@ -832,17 +806,26 @@ t
 have
 any
 action
-gQueue
-.
-push
-(
-new
 removeOnClickAttr
 (
 "
 div
 "
 )
+;
+/
+/
+Call
+rest
+of
+event
+tests
+.
+gQueue
+=
+new
+eventQueue
+(
 )
 ;
 /
