Bug 1151421 Part 3: Update tests of pageYOffset/scrollY to round off when checking expected results. r=smaug
MozReview-Commit-ID: JDS5l06FAaf

UltraBlame original commit: a2ee4de4944ca8dd2e8a97046a625eb86a85f64d

--- a/docshell/test/navigation/file_scrollRestoration.html
+++ b/docshell/test/navigation/file_scrollRestoration.html
@@ -269,9 +269,14 @@ opener
 .
 isnot
 (
+Math
+.
+round
+(
 window
 .
 scrollY
+)
 0
 "
 Should
@@ -492,9 +497,14 @@ opener
 .
 isnot
 (
+Math
+.
+round
+(
 window
 .
 scrollY
+)
 0
 "
 Should
@@ -565,9 +575,14 @@ opener
 .
 isnot
 (
+Math
+.
+round
+(
 window
 .
 scrollY
+)
 0
 "
 Should
@@ -808,9 +823,14 @@ opener
 .
 isnot
 (
+Math
+.
+round
+(
 window
 .
 scrollY
+)
 0
 "
 Should
@@ -916,9 +936,14 @@ opener
 .
 is
 (
+Math
+.
+round
+(
 window
 .
 scrollY
+)
 0
 "
 Shouldn
@@ -996,9 +1021,14 @@ opener
 .
 isnot
 (
+Math
+.
+round
+(
 window
 .
 scrollY
+)
 0
 "
 Should
@@ -1036,9 +1066,14 @@ opener
 .
 isnot
 (
+Math
+.
+round
+(
 window
 .
 scrollY
+)
 0
 "
 Should
