--- a/docshell/test/test_bug590573.html
+++ b/docshell/test/test_bug590573.html
@@ -887,9 +887,14 @@ pushed
 ;
 is
 (
+Math
+.
+round
+(
 popup
 .
 scrollY
+)
 100
 "
 test
@@ -926,9 +931,14 @@ back
 ;
 is
 (
+Math
+.
+round
+(
 popup
 .
 scrollY
+)
 100
 "
 test
@@ -964,9 +974,14 @@ forward
 ;
 is
 (
+Math
+.
+round
+(
 popup
 .
 scrollY
+)
 200
 "
 test
@@ -984,9 +999,14 @@ back
 ;
 is
 (
+Math
+.
+round
+(
 popup
 .
 scrollY
+)
 150
 "
 test
@@ -1004,9 +1024,14 @@ forward
 ;
 is
 (
+Math
+.
+round
+(
 popup
 .
 scrollY
+)
 200
 "
 test
@@ -1282,9 +1307,14 @@ div1
 ;
 is
 (
+Math
+.
+round
+(
 popup
 .
 scrollY
+)
 200
 "
 test
@@ -1302,9 +1332,14 @@ back
 ;
 is
 (
+Math
+.
+round
+(
 popup
 .
 scrollY
+)
 150
 "
 test
@@ -1322,9 +1357,14 @@ forward
 ;
 is
 (
+Math
+.
+round
+(
 popup
 .
 scrollY
+)
 200
 "
 test
