--- a/docshell/test/test_bug653741.html
+++ b/docshell/test/test_bug653741.html
@@ -270,9 +270,14 @@ page
 let
 origYOffset
 =
+Math
+.
+round
+(
 cw
 .
 pageYOffset
+)
 ;
 ok
 (
@@ -348,9 +353,14 @@ location
 ;
 is
 (
+Math
+.
+round
+(
 cw
 .
 pageYOffset
+)
 origYOffset
 '
 Correct
