--- a/dom/base/test/test_viewport_scroll.html
+++ b/dom/base/test/test_viewport_scroll.html
@@ -360,10 +360,15 @@ correctElement
 {
 is
 (
+Math
+.
+round
+(
 win
 [
 winProp
 ]
+)
 100
 "
 Setting
@@ -418,10 +423,15 @@ else
 {
 is
 (
+Math
+.
+round
+(
 win
 [
 winProp
 ]
+)
 50
 "
 Setting
