--- a/dom/tests/mochitest/general/test_domWindowUtils_scrollXY.html
+++ b/dom/tests/mochitest/general/test_domWindowUtils_scrollXY.html
@@ -215,9 +215,14 @@ scrollY
 ;
 is
 (
+Math
+.
+round
+(
 scrollX
 .
 value
+)
 vals
 [
 0
@@ -235,9 +240,14 @@ testName
 ;
 is
 (
+Math
+.
+round
+(
 scrollY
 .
 value
+)
 vals
 [
 1
@@ -263,9 +273,14 @@ testName
 {
 is
 (
+Math
+.
+round
+(
 cwindow
 .
 scrollX
+)
 vals
 [
 0
@@ -282,9 +297,14 @@ testName
 ;
 is
 (
+Math
+.
+round
+(
 cwindow
 .
 scrollY
+)
 vals
 [
 1
@@ -550,9 +570,14 @@ scrollY
 ;
 is
 (
+Math
+.
+round
+(
 scrollX
 .
 value
+)
 0
 "
 scrollX
@@ -568,9 +593,14 @@ iframe
 ;
 is
 (
+Math
+.
+round
+(
 scrollY
 .
 value
+)
 0
 "
 scrollY
