Bug 1347983 - Part 2: Add a test to ensure that forms submitted from a large-allocation page behave correctly, r=smaug
MozReview-Commit-ID: Af44H11AFMf

UltraBlame original commit: 38ecd019ecebe7533852db0253393d2708527437

--- a/dom/tests/browser/test_largeAllocation.html
+++ b/dom/tests/browser/test_largeAllocation.html
@@ -16,6 +16,67 @@ new
 process
 !
 <
+form
+action
+=
+"
+test_largeAllocationFormSubmit
+.
+sjs
+"
+method
+=
+"
+POST
+"
+>
+<
+input
+type
+=
+"
+text
+"
+name
+=
+"
+textarea
+"
+value
+=
+"
+default
+value
+"
+>
+<
+input
+type
+=
+"
+submit
+"
+name
+=
+"
+button
+"
+value
+=
+"
+submit
+"
+id
+=
+"
+submit
+"
+>
+<
+/
+form
+>
+<
 /
 body
 >
