Bug 1344642 - Part 2: Add a new pref for input type=week, month and datetime-local. r=smaug
UltraBlame original commit: 8603d4d348a45a00da0a31b3ffa9a84276ff409d

--- a/dom/html/test/forms/test_valueAsDate_pref.html
+++ b/dom/html/test/forms/test_valueAsDate_pref.html
@@ -142,6 +142,13 @@ dom
 forms
 .
 datetime
+dom
+.
+forms
+.
+datetime
+.
+others
 expectedValueAsDate
 [
 '
@@ -153,10 +160,16 @@ true
 '
 true
 '
+'
+true
+'
 ]
 [
 '
 true
+'
+'
+false
 '
 '
 false
@@ -173,10 +186,30 @@ false
 true
 '
 '
+false
+'
+'
 true
 '
 ]
 [
+'
+false
+'
+'
+false
+'
+'
+true
+'
+'
+true
+'
+]
+[
+'
+false
+'
 '
 false
 '
@@ -278,6 +311,27 @@ state
 true
 '
 ]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
+"
+state
+[
+2
+]
+=
+=
+=
+'
+true
+'
+]
 ]
 }
 function
@@ -320,7 +374,7 @@ input
 +
 state
 [
-2
+3
 ]
 +
 '
@@ -334,7 +388,7 @@ be
 +
 state
 [
-2
+3
 ]
 +
 '
