--- a/dom/html/test/forms/test_input_types_pref.html
+++ b/dom/html/test/forms/test_input_types_pref.html
@@ -444,9 +444,123 @@ prefs
 "
 dom
 .
+experimental_forms
+"
+false
+]
+[
+"
+dom
+.
 forms
 .
 datetime
+"
+false
+]
+]
+inputType
+:
+"
+time
+"
+expectedType
+:
+"
+text
+"
+}
+{
+prefs
+:
+[
+[
+"
+dom
+.
+experimental_forms
+"
+true
+]
+[
+"
+dom
+.
+forms
+.
+datetime
+"
+false
+]
+]
+inputType
+:
+"
+time
+"
+expectedType
+:
+"
+time
+"
+}
+{
+prefs
+:
+[
+[
+"
+dom
+.
+experimental_forms
+"
+false
+]
+[
+"
+dom
+.
+forms
+.
+datetime
+"
+true
+]
+]
+inputType
+:
+"
+time
+"
+expectedType
+:
+"
+time
+"
+}
+{
+prefs
+:
+[
+[
+"
+dom
+.
+forms
+.
+datetime
+"
+false
+]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
 "
 false
 ]
@@ -476,6 +590,56 @@ datetime
 "
 true
 ]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
+"
+false
+]
+]
+inputType
+:
+"
+month
+"
+expectedType
+:
+"
+text
+"
+}
+{
+prefs
+:
+[
+[
+"
+dom
+.
+forms
+.
+datetime
+"
+false
+]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
+"
+true
+]
 ]
 inputType
 :
@@ -499,6 +663,18 @@ dom
 forms
 .
 datetime
+"
+false
+]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
 "
 false
 ]
@@ -528,6 +704,56 @@ datetime
 "
 true
 ]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
+"
+false
+]
+]
+inputType
+:
+"
+week
+"
+expectedType
+:
+"
+text
+"
+}
+{
+prefs
+:
+[
+[
+"
+dom
+.
+forms
+.
+datetime
+"
+false
+]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
+"
+true
+]
 ]
 inputType
 :
@@ -551,6 +777,18 @@ dom
 forms
 .
 datetime
+"
+false
+]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
 "
 false
 ]
@@ -579,6 +817,58 @@ dom
 forms
 .
 datetime
+"
+true
+]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
+"
+false
+]
+]
+inputType
+:
+"
+datetime
+-
+local
+"
+expectedType
+:
+"
+text
+"
+}
+{
+prefs
+:
+[
+[
+"
+dom
+.
+forms
+.
+datetime
+"
+false
+]
+[
+"
+dom
+.
+forms
+.
+datetime
+.
+others
 "
 true
 ]
