Bug 1348416 - Update pdf.js to version 1.7.367. r=bdahl
UltraBlame original commit: 72db5ab9e200fc0fb7095e9d1e3c235a0db142ed

--- a/browser/extensions/pdfjs/content/web/viewer.html
+++ b/browser/extensions/pdfjs/content/web/viewer.html
@@ -706,6 +706,11 @@ splitToolbarButton
 >
 <
 button
+id
+=
+"
+findPrevious
+"
 class
 =
 "
@@ -715,11 +720,13 @@ findPrevious
 title
 =
 "
-"
-id
-=
-"
-findPrevious
+Find
+the
+previous
+occurrence
+of
+the
+phrase
 "
 tabindex
 =
@@ -771,6 +778,11 @@ div
 >
 <
 button
+id
+=
+"
+findNext
+"
 class
 =
 "
@@ -780,11 +792,13 @@ findNext
 title
 =
 "
-"
-id
-=
-"
-findNext
+Find
+the
+next
+occurrence
+of
+the
+phrase
 "
 tabindex
 =
