Bug 1348174 - Convert test_enumerateDevices.html to async/await. r=ng
MozReview-Commit-ID: 7kWiwD0E5tO

UltraBlame original commit: 59f63f2a1dc8cef58235d4b381c1d4d51aa942d7

--- a/dom/media/tests/mochitest/test_enumerateDevices.html
+++ b/dom/media/tests/mochitest/test_enumerateDevices.html
@@ -82,6 +82,7 @@ code
 .
 *
 /
+async
 function
 mustSucceed
 (
@@ -89,17 +90,13 @@ msg
 f
 )
 {
-return
+try
+{
+await
 f
 (
 )
-.
-then
-(
-(
-)
-=
->
+;
 ok
 (
 true
@@ -110,9 +107,13 @@ must
 succeed
 "
 )
+;
+}
+catch
+(
 e
-=
->
+)
+{
 is
 (
 e
@@ -131,9 +132,10 @@ e
 .
 message
 )
-)
 ;
 }
+}
+async
 function
 mustFailWith
 (
@@ -143,17 +145,13 @@ constraint
 f
 )
 {
-return
+try
+{
+await
 f
 (
 )
-.
-then
-(
-(
-)
-=
->
+;
 ok
 (
 false
@@ -164,9 +162,12 @@ must
 fail
 "
 )
+;
+}
+catch
+(
 e
-=
->
+)
 {
 is
 (
@@ -213,8 +214,6 @@ constraint
 ;
 }
 }
-)
-;
 }
 var
 pushPrefs
@@ -238,12 +237,132 @@ p
 }
 )
 ;
+var
+gUM
+=
+c
+=
+>
+navigator
+.
+mediaDevices
+.
+getUserMedia
+(
+c
+)
+;
+var
+validateDevice
+=
+(
+{
+kind
+label
+deviceId
+groupId
+}
+)
+=
+>
+{
+ok
+(
+kind
+=
+=
+"
+videoinput
+"
+|
+|
+kind
+=
+=
+"
+audioinput
+"
+"
+Known
+device
+kind
+"
+)
+;
+is
+(
+deviceId
+.
+length
+44
+"
+deviceId
+length
+id
+as
+expected
+for
+Firefox
+"
+)
+;
+ok
+(
+label
+.
+length
+!
+=
+=
+undefined
+"
+Device
+label
+:
+"
++
+label
+)
+;
+/
+/
+TODO
+:
+s
+/
+todo_
+/
+/
+once
+Bug
+1213453
+is
+fixed
+.
+todo_isnot
+(
+groupId
+"
+"
+"
+groupId
+must
+be
+present
+.
+"
+)
+;
+}
 runTest
 (
+async
 (
 )
 =
 >
+{
+await
 pushPrefs
 (
 [
@@ -259,13 +378,17 @@ fake
 true
 ]
 )
+;
+/
+/
+Validate
+enumerated
+devices
 .
-then
-(
-(
-)
+let
+devices
 =
->
+await
 navigator
 .
 mediaDevices
@@ -273,14 +396,7 @@ mediaDevices
 enumerateDevices
 (
 )
-)
-.
-then
-(
-devices
-=
->
-{
+;
 ok
 (
 devices
@@ -297,7 +413,7 @@ found
 "
 )
 ;
-var
+let
 jsoned
 =
 JSON
@@ -354,109 +470,36 @@ serializer
 "
 )
 ;
-return
+for
+(
+let
+device
+of
 devices
-.
-reduce
-(
-(
-p
-d
 )
-=
->
 {
-ok
+validateDevice
 (
-d
-.
-kind
-=
-=
-"
-videoinput
-"
-|
-|
-d
-.
-kind
-=
-=
-"
-audioinput
-"
-"
-Known
 device
-kind
-"
 )
 ;
-is
-(
-d
+/
+/
+Test
+deviceId
+constraint
+let
+deviceId
+=
+device
 .
 deviceId
-.
-length
-44
-"
-Correct
+;
+let
+constraints
+=
+(
 device
-id
-length
-"
-)
-;
-ok
-(
-d
-.
-label
-.
-length
-!
-=
-=
-undefined
-"
-Device
-label
-:
-"
-+
-d
-.
-label
-)
-;
-is
-(
-d
-.
-groupId
-"
-"
-"
-Don
-'
-t
-support
-groupId
-yet
-"
-)
-;
-var
-c
-=
-{
-}
-;
-c
-[
-d
 .
 kind
 =
@@ -464,60 +507,41 @@ kind
 "
 videoinput
 "
+)
 ?
-"
-video
-"
-:
-"
-audio
-"
-]
-=
 {
-deviceId
+video
 :
-d
-.
+{
 deviceId
 }
-;
-return
-p
-.
-then
-(
-(
-)
-=
->
-navigator
-.
-mediaDevices
-.
-getUserMedia
-(
-c
-)
-)
-.
-then
-(
-stream
-=
->
+}
+:
 {
-stream
+audio
+:
+{
+deviceId
+}
+}
+;
+for
+(
+let
+track
+of
+(
+await
+gUM
+(
+constraints
+)
+)
 .
 getTracks
 (
 )
-.
-forEach
-(
-track
-=
->
+)
 {
 is
 (
@@ -531,43 +555,50 @@ label
 string
 "
 "
-Label
+Track
+label
 is
 a
 string
 "
 )
+;
 is
 (
 track
 .
 label
-d
+device
 .
 label
 "
-Label
+Track
+label
 is
 the
 device
 label
 "
 )
-}
-)
-}
-)
 ;
-}
-Promise
+track
 .
-resolve
+stop
 (
 )
-)
 ;
 }
-)
+}
+const
+unknownId
+=
+"
+unknown9qHr8B0JIbcHlbl9xR
++
+jMbZZ8WyoPfpCXPfc
+=
+"
+;
 /
 /
 Check
@@ -577,13 +608,7 @@ paths
 for
 video
 .
-.
-then
-(
-(
-)
-=
->
+await
 mustSucceed
 (
 "
@@ -597,11 +622,7 @@ video
 )
 =
 >
-navigator
-.
-mediaDevices
-.
-getUserMedia
+gUM
 (
 {
 video
@@ -609,24 +630,13 @@ video
 {
 deviceId
 :
-"
-unknown9qHr8B0JIbcHlbl9xR
-+
-jMbZZ8WyoPfpCXPfc
-=
-"
+unknownId
 }
 }
 )
 )
-)
-.
-then
-(
-(
-)
-=
->
+;
+await
 mustSucceed
 (
 "
@@ -640,11 +650,7 @@ audio
 )
 =
 >
-navigator
-.
-mediaDevices
-.
-getUserMedia
+gUM
 (
 {
 audio
@@ -652,24 +658,13 @@ audio
 {
 deviceId
 :
-"
-unknown9qHr8B0JIbcHlbl9xR
-+
-jMbZZ8WyoPfpCXPfc
-=
-"
+unknownId
 }
 }
 )
 )
-)
-.
-then
-(
-(
-)
-=
->
+;
+await
 mustFailWith
 (
 "
@@ -689,11 +684,7 @@ deviceId
 )
 =
 >
-navigator
-.
-mediaDevices
-.
-getUserMedia
+gUM
 (
 {
 video
@@ -704,25 +695,14 @@ deviceId
 {
 exact
 :
-"
-unknown9qHr8B0JIbcHlbl9xR
-+
-jMbZZ8WyoPfpCXPfc
-=
-"
+unknownId
 }
 }
 }
 )
 )
-)
-.
-then
-(
-(
-)
-=
->
+;
+await
 mustFailWith
 (
 "
@@ -742,11 +722,7 @@ deviceId
 )
 =
 >
-navigator
-.
-mediaDevices
-.
-getUserMedia
+gUM
 (
 {
 audio
@@ -757,18 +733,13 @@ deviceId
 {
 exact
 :
-"
-unknown9qHr8B0JIbcHlbl9xR
-+
-jMbZZ8WyoPfpCXPfc
-=
-"
+unknownId
 }
 }
 }
 )
 )
-)
+;
 /
 /
 Check
@@ -780,13 +751,7 @@ no
 devices
 found
 .
-.
-then
-(
-(
-)
-=
->
+await
 pushPrefs
 (
 [
@@ -822,14 +787,10 @@ none
 "
 ]
 )
-)
-.
-then
-(
-(
-)
+;
+devices
 =
->
+await
 navigator
 .
 mediaDevices
@@ -837,13 +798,7 @@ mediaDevices
 enumerateDevices
 (
 )
-)
-.
-then
-(
-devices
-=
->
+;
 ok
 (
 devices
@@ -859,7 +814,8 @@ devices
 found
 "
 )
-)
+;
+}
 )
 ;
 <
